# South-China-Livehood-Evolution

./: .gitignore  .pre-commit-config.yaml  .vercelignore  404.html  CHANGELOG.md  DEPLOYMENT.md  README.md  RoadMap.md  VERCEL_DEPLOYMENT.md  build_vercel.sh  deploy.sh  exp.ipynb  index.html  makefile  mkdocs.yml  objects.inv  playground.ipynb  pyproject.toml  release-please-config.json  requirements-docs.txt  requirements.txt  vercel.json  使用指南.md  模型框架_zl_25.10.xlsx  部署完成总结.md
.github/workflows/: docs-vercel.yml  docusaurus-pages.yml  gh_page.yml  release-please.yml  vercel-deploy.yml
.vercel/: project.json
CHANGELOG.d/: 农业主体根据适宜度选取.md  初始狩猎采集者设置.md  检测主体的分布.md
abses_sce/: analysis.py  env.py  exp.py  farmer.py  hunter.py  model.py  people.py  plot.py
api/env/: index.html
api/farmer/: index.html
api/hunter/: index.html
api/model/: index.html
assets/: Drawing 2023-10-01 22.31.23.excalidraw.md
config/: config.yaml  viz_config.yaml
data/: hg_popu.tif  hn_asp_10km1.tif  hn_dem_10km1.tif  hn_slo_10km1.tif  waterbody.tif
demo/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/UPDATES/: index.html
dev/api/env/: index.html
dev/api/farmer/: index.html
dev/api/hunter/: index.html
dev/api/model/: index.html
dev/demo/: index.html
dev/en/: index.html
dev/en/UPDATES/: index.html
dev/en/api/env/: index.html
dev/en/api/farmer/: index.html
dev/en/api/hunter/: index.html
dev/en/api/model/: index.html
dev/en/tech/breakpoint/: index.html
dev/en/tech/changelog_v2/: index.html
dev/en/tech/sequence_diagram/: index.html
dev/en/usage/config/: index.html
dev/en/usage/plots/: index.html
dev/en/usage/quick_start/: index.html
dev/en/usage/workflow/: index.html
dev/javascripts/: mermaid-init.js
dev/search/: search_index.json
dev/tech/breakpoint/: index.html
dev/tech/changelog_v2/: index.html
dev/tech/sequence_diagram/: index.html
dev/usage/config/: index.html
dev/usage/plots/: index.html
dev/usage/quick_start/: index.html
dev/usage/workflow/: index.html
docs/: README.md  UPDATES.en.md  UPDATES.md  demo.ipynb  index.en.md  index.md  quick_start.md
docs-docusaurus/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  vercel.json
docs-docusaurus/docs/: mermaid-test.md  simple-test.md
docs-docusaurus/docs/api/: env.md  farmer.md  hunter.md  model.md
docs-docusaurus/docs/tech/: breakpoint.md  changelog_v2.md  sequence_diagram.md
docs-docusaurus/docs/usage/: config.md  plots.md
docs-docusaurus/src/components/HomepageFeatures/: index.tsx
docs-docusaurus/src/pages/: index.tsx
docs/api/: env.md  farmer.md  hunter.md  model.md  people.md
docs/tech/: changelog_v2.en.md  changelog_v2.md  sequence_diagram.en.md
docs/usage/: config.en.md  config.md  plots.md  quick_start.md  workflow.en.md  workflow.md
quick_start/: index.html
reports/: geodata.ipynb  heatmap.ipynb  run_model.ipynb
search/: search_index.json
src/: __init__.py  __main__.py  app.py  const.py  env.py  exp.py  farmer.py  hunter.py  model.py  people.py  plot.py  rice_farmer.py
src/api/: __init__.py  env.py  farmer.py  hunter.py  people.py  rice_farmer.py
src/config/: config.yaml
src/core/: __init__.py  exp.py  model.py
src/workflow/: __init__.py  analysis.py  plot.py
tech/breakpoint/: index.html
tests/: config_test.yaml  conftest.py  test_env.py  test_farmer.py  test_group.py  test_hunters.py  test_people.py  test_rice.py
usage/config/: index.html
usage/plots/: index.html
usage/quick_start/: index.html
usage/workflow/: index.html
